# modelling_and_simulation_assignments

./: README.md  pyproject.toml
src/: 01_loan_manager.py  02_queuing_models.py
src/loan_calculator/: README.md  __init__.py  __main__.py  pyproject.toml  test.ipynb
src/loan_calculator/.ipynb_checkpoints/: test-checkpoint.ipynb
src/modelling_and_simulation_assignments/: __init__.py  __main__.py
src/queuing_models/: __init__.py  __main__.py
