[project]
name = "modelling-and-simulation-assignments"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Daniel Chinedu Onyesoh", email = "danielonyesoh@gmail.com" }
]
dependencies = [
    "matplotlib>=3.8.4",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.2",
    "pyqt6>=6.7.0",
    "ipykernel>=6.29.4",
    "jupyter>=1.0.0",
    "termplotlib>=0.3.9",
    "marimo>=0.5.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"modelling-and-simulation-assignments" = "modelling_and_simulation_assignments:main"
"loan-calculator" = "loan_calculator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/modelling_and_simulation_assignments"]
